[package]
name = "brutal-iroh"
version = "0.1.0"
edition = "2021"

[dependencies]
brutal-core = { path = "../brutal-core" }
tracing = "0.1"

iroh-quinn = { path = "/home/hrimfaxi/iroh_quinn/quinn", package = "iroh-quinn" }
iroh-quinn-proto = { path = "/home/hrimfaxi/iroh_quinn/quinn-proto", package = "iroh-quinn-proto" }
dashmap = "6.1.0"
once_cell = "1.21.4"
